AUT-2327 Update to Java21